# PP-CNN

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  build_docker.sh  demo.sh  run_container.sh
demo/: CMakeLists.txt
demo/client/: CMakeLists.txt  config.txt  main.cpp
demo/server/: CMakeLists.txt  main.cpp
demo/share/: define.hpp
doc/: Doxyfile
plaintext_experiment/: callbacks.py  functions.py  my_json_encoder.py
plaintext_experiment/cifar-10/: CKKS.py  HCNN.py  Plain-mish.py  Plain-relu.py  Plain-swish.py  predict.py
plaintext_experiment/cifar-10/saved_models/: CKKS-mish_rg4_deg4-BN-DA_structure.json  CKKS-mish_rg4_deg4-BN-DA_weights.h5  CKKS-mish_rg6_deg4-BN-DA_structure.json  CKKS-mish_rg6_deg4-BN-DA_weights.h5  CKKS-swish_rg3_deg4-BN-DA_structure.json  CKKS-swish_rg3_deg4-BN-DA_weights.h5  CKKS-swish_rg3_deg4-BN_structure.json  CKKS-swish_rg3_deg4-BN_weights.h5  CKKS-swish_rg3_deg4-DA_weights.h5  CKKS-swish_rg3_deg4_structure.json  CKKS-swish_rg3_deg4_weights.h5  CKKS-swish_rg4_deg4-BN-DA_structure.json  CKKS-swish_rg4_deg4-BN-DA_weights.h5  CKKS-swish_rg4_deg4-BN-GAP-DA_structure.json  CKKS-swish_rg4_deg4-BN-GAP-DA_weights.h5  CKKS-swish_rg4_deg4-BN_structure.json  CKKS-swish_rg4_deg4-BN_weights.h5  CKKS-swish_rg4_deg4-DA_weights.h5  CKKS-swish_rg4_deg4_structure.json  CKKS-swish_rg4_deg4_weights.h5  CKKS-swish_rg5_deg4-BN-DA_weights.h5  CKKS-swish_rg5_deg4-BN_structure.json  CKKS-swish_rg5_deg4-BN_weights.h5  CKKS-swish_rg5_deg4-DA_structure.json  CKKS-swish_rg5_deg4-DA_weights.h5  CKKS-swish_rg5_deg4_weights.h5  CKKS-swish_rg6_deg4-BN-DA_weights.h5  CKKS-swish_rg6_deg4-BN-GAP-DA_structure.json  CKKS-swish_rg6_deg4-BN-GAP-DA_weights.h5  CKKS-swish_rg6_deg4-BN_structure.json  CKKS-swish_rg6_deg4-BN_weights.h5  CKKS-swish_rg6_deg4-DA_structure.json  CKKS-swish_rg6_deg4-DA_weights.h5  CKKS-swish_rg6_deg4_weights.h5  HCNN-BN-DA_structure.json  HCNN-BN-DA_weights.h5  HCNN-BN-GAP-DA_structure.json  HCNN-BN-GAP-DA_weights.h5  HCNN-BN_weights.h5  HCNN-DA_weights.h5  (+14 more)
plaintext_experiment/mnist/: CKKS.py  HCNN.py  Plain-mish.py  Plain-relu.py  Plain-swish.py  predict.py
plaintext_experiment/mnist/saved_models/: CKKS-swish_rg4_deg4-BN-DA_structure.json  CKKS-swish_rg4_deg4-BN-DA_weights.h5  CKKS-swish_rg4_deg4-BN-GAP-DA_structure.json  CKKS-swish_rg4_deg4-BN-GAP-DA_weights.h5  CKKS-swish_rg4_deg4-BN_structure.json  CKKS-swish_rg4_deg4-BN_weights.h5  CKKS-swish_rg4_deg4-DA_weights.h5  CKKS-swish_rg4_deg4_structure.json  CKKS-swish_rg4_deg4_weights.h5  CKKS-swish_rg5_deg4-BN-DA_structure.json  CKKS-swish_rg5_deg4-BN-DA_weights.h5  CKKS-swish_rg5_deg4-BN_weights.h5  CKKS-swish_rg5_deg4-DA_structure.json  CKKS-swish_rg5_deg4-DA_weights.h5  CKKS-swish_rg5_deg4_weights.h5  CKKS-swish_rg6_deg4-BN-DA_structure.json  (+29 more)
pp_cnn/scripts/: execute.sh
pp_cnn/src/: CMakeLists.txt  main.cpp  setup.cpp
pp_cnn/src/cnn/: CMakeLists.txt  activation.cpp  activation.hpp  average_pooling2d.cpp  average_pooling2d.hpp  batch_normalization.cpp  batch_normalization.hpp  conv2d.cpp  conv2d.hpp  conv2d_fused_bn.cpp  conv2d_fused_bn.hpp  dense.cpp  dense.hpp  dense_fused_bn.cpp  dense_fused_bn.hpp  flatten.cpp  flatten.hpp  global_average_pooling2d.cpp  global_average_pooling2d.hpp  layer.cpp  layer.hpp  load_model.cpp  load_model.hpp  network.cpp  network.hpp  network_builder.cpp  network_builder.hpp
pp_cnn/src/utils/: CMakeLists.txt  globals.cpp  globals.hpp  helper_functions.cpp  helper_functions.hpp  load_dataset.cpp  load_dataset.hpp  opt_option.hpp  seal_tool.hpp  timer.hpp
ppcnn/: CMakeLists.txt  module.cmake
ppcnn/ppcnn_client/: CMakeLists.txt  ppcnn_client.cpp  ppcnn_client.hpp  ppcnn_client_keycontainer.cpp  ppcnn_client_keycontainer.hpp  ppcnn_client_result_cbfunc.hpp  ppcnn_client_result_thread.cpp  ppcnn_client_result_thread.hpp
ppcnn/ppcnn_server/: CMakeLists.txt  ppcnn_server.cpp  ppcnn_server.hpp  ppcnn_server_calcmanager.cpp  ppcnn_server_calcmanager.hpp  ppcnn_server_calcthread.cpp  ppcnn_server_calcthread.hpp  ppcnn_server_callback_function.cpp  ppcnn_server_callback_function.hpp  ppcnn_server_callback_param.cpp  ppcnn_server_callback_param.hpp  ppcnn_server_keycontainer.cpp  ppcnn_server_keycontainer.hpp  ppcnn_server_query.cpp  ppcnn_server_query.hpp  ppcnn_server_result.cpp  ppcnn_server_result.hpp  ppcnn_server_state.cpp  ppcnn_server_state.hpp
ppcnn/ppcnn_share/: CMakeLists.txt  ppcnn_basicdata.hpp  ppcnn_cli2srvparam.cpp  ppcnn_cli2srvparam.hpp  ppcnn_computation_params.cpp  ppcnn_computation_params.hpp  ppcnn_concurrent_mapqueue.hpp  ppcnn_config.cpp  ppcnn_config.hpp  ppcnn_define.hpp  ppcnn_encdata.cpp  ppcnn_encdata.hpp  ppcnn_packet.hpp  ppcnn_plaindata.hpp  ppcnn_seal_utility.cpp  ppcnn_seal_utility.hpp  ppcnn_srv2cliparam.cpp  ppcnn_srv2cliparam.hpp  ppcnn_utility.cpp  ppcnn_utility.hpp
(+35 files in other folders)
